--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/projetos.css">
     <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/coockie.css">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -97,5 +98,18 @@
           </p>
         </div>
       </footer>
+
+      <div class="box-cookies hide container">
+        <div class="row">
+            <div class="col">
+                <p class="msg-cookies">
+                  deseja aceitar que o site guarde informações no seu computador.
+                </p>
+            </div>
+            <div class="col-auto">
+                <button class="btn-cookies button-primary">Eu aceito</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
